--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Revisions.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Revisions.cshtml
@@ -4,75 +4,75 @@
     Layout = "ReviewLayout";
     ViewData["Title"] = "Revisions";
 }
-
-<div class="row" asp-resource="@Model.Review" asp-requirement="@AutoReviewModifierRequirement.Instance">
-    <div class="col">
-        <div class="mt-2">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadModel">Add revision</button>
+<div class="container-fluid">
+    <div class="mx-5 mt-2">
+        <div class="row" asp-resource="@Model.Review" asp-requirement="@AutoReviewModifierRequirement.Instance">
+            <div class="bottom-right-floating">
+                <button type="button" class="btn btn-primary btn-circle btn-circle-xl" data-toggle="modal" data-target="#uploadModel"><small>ADD</small></br><i class="fas fa-sm fa-plus"></i></br><small>REVISION</small></button>
+            </div>
         </div>
-    </div>
-</div>
 
-
-<div class="modal fade" id="uploadModel" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <form asp-page-handler="Upload" method="post" enctype="multipart/form-data">
-                <div class="modal-header">
-                    <h5 class="modal-title">Upload file</h5>
-                    <button type="button" class="close" data-dismiss="modal">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <div class="custom-file">
-                            <input name="upload" type="file" class="custom-file-input">
-                            <label for="upload" class="custom-file-label">Select file to add</label>
+        <div class="modal fade" id="uploadModel" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <form asp-page-handler="Upload" method="post" enctype="multipart/form-data">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Upload file</h5>
+                            <button type="button" class="close" data-dismiss="modal">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
                         </div>
-                    </div>
-                    <div>
-                        <input asp-for="Label" class="form-control" type="text" placeholder="Enter an optional revision label">
-                    </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <div class="custom-file">
+                                    <input name="upload" type="file" class="custom-file-input">
+                                    <label for="upload" class="custom-file-label">Select file to add</label>
+                                </div>
+                            </div>
+                            <div>
+                                <input asp-for="Label" class="form-control" type="text" placeholder="Enter an optional revision label">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary" onclick="this.form.submit(); this.disabled = true;"><i class="fas fa-cloud-upload-alt"></i> Upload</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Upload</button>
-                </div>
-            </form>
+            </div>
         </div>
-    </div>
-</div>
 
-<div class="row">
-    <div class="col">
-        <ul class="list-group mt-2">
-            @foreach (var revision in Model.Review.Revisions.Reverse())
-            {
-                <li class="list-group-item">
-                    <form class="form-inline revision-rename-form float-left" asp-page-handler="Rename" method="post">
-                        <span asp-resource="@revision" asp-requirement="@RevisionOwnerRequirement.Instance">
-                            <a href="#" class="text-decoration-none revision-rename-icon pr-2">✎</a>
-                            <input type="hidden" name="revisionId" value="@revision.RevisionId" />
-                            <span class="revision-name-input form-group-lg pr-2" style="display:none">
-                                <input type="text" class="form-control" name="newLabel" value="@revision.Label" placeholder="Enter a revision label" />
-                                <a href="#" class="text-decoration-none submit-revision-rename">✔️</a>
-                                <a href="#" class="text-decoration-none cancel-revision-rename">❌</a>
-                            </span>
-                        </span>
-                        <span class="revision-name-label">@revision.DisplayName</span>
-                        <span class="font-italic pl-3">
-                            <span date="@revision.CreationDate"></span>
-                            <span>by @revision.Author</span>
-                        </span>
-                    </form>
-                    <form asp-resource="@revision" asp-requirement="@RevisionOwnerRequirement.Instance"
-                          class="form-inline float-right" asp-page-handler="Delete" method="post">
-                        <input type="hidden" name="revisionId" value="@revision.RevisionId" />
-                        <input type="submit" class="btn btn-danger btn-sm" value="Delete" />
-                    </form>
-                </li>
-            }
-        </ul>
+        <div class="row">
+            <div class="col">
+                <ul class="list-group mt-2">
+                    @foreach (var revision in Model.Review.Revisions.Reverse())
+                    {
+                        <li class="list-group-item">
+                            <form class="form-inline revision-rename-form float-left" asp-page-handler="Rename" method="post">
+                                <span asp-resource="@revision" asp-requirement="@RevisionOwnerRequirement.Instance">
+                                    <a href="#" class="text-decoration-none revision-rename-icon pr-2">✎</a>
+                                    <input type="hidden" name="revisionId" value="@revision.RevisionId" />
+                                    <span class="revision-name-input form-group-lg pr-2" style="display:none">
+                                        <input type="text" class="form-control" name="newLabel" value="@revision.Label" placeholder="Enter a revision label" />
+                                        <a href="#" class="text-decoration-none submit-revision-rename">✔️</a>
+                                        <a href="#" class="text-decoration-none cancel-revision-rename">❌</a>
+                                    </span>
+                                </span>
+                                <span class="revision-name-label">@revision.DisplayName</span>
+                                <span class="font-italic pl-3">
+                                    <span date="@revision.CreationDate"></span>
+                                    <span>by @revision.Author</span>
+                                </span>
+                            </form>
+                            <form asp-resource="@revision" asp-requirement="@RevisionOwnerRequirement.Instance"
+                                class="form-inline float-right" asp-page-handler="Delete" method="post">
+                                <input type="hidden" name="revisionId" value="@revision.RevisionId" />
+                                <input type="submit" class="btn btn-danger btn-sm" value="Delete" />
+                            </form>
+                        </li>
+                    }
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
