fix: resource deployment param bug and userAssignedIdentity bug (#2804)
* fix: resource deployment param bug and userAssignedIdentity bug

* chore: update test output for the gotest change

* build: release @autorest/gotest_v2.1.1

--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/scenarioContent.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/scenarioContent.go.njk
@@ -94,8 +94,8 @@
     template := {{step.armTemplateOutput}}
     params := map[string]interface{}{
         {%- for k, v in step.armTemplatePayload.parameters %}
-        {%- if v.defaultValue === "$("  + k + ")" and k !== "userAssignedIdentity" %}
-    "{{k}}": {{k}},
+        {%- if v.defaultValue === "$("  + k + ")" %}
+    "{{k}}": map[string]interface{}{ "value": {{k}},},
         {%- endif %}
         {%- endfor %}
     }
