Sample generation and some fix for gotest (#2920)
* fix: operation has no subscriptionID param but client has, need to handle it seperately

* fix: change from go get to go install to prevent warnning

* feat: consolidate manual-written and auto-generated scenario test code

* feat: update to latest azcore for mock test

* feat: add sample generation

* test: update test snapshot

* build: release @autorest/gotest_v2.2.0

--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/mockTest.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/mockTest.go.njk
@@ -16,6 +16,7 @@ import (
 	"github.com/Azure/azure-sdk-for-go/sdk/azcore"
 	"github.com/Azure/azure-sdk-for-go/sdk/azcore/arm"
 	"github.com/Azure/azure-sdk-for-go/sdk/azcore/policy"
+    "github.com/Azure/azure-sdk-for-go/sdk/azcore/runtime"
 	"github.com/Azure/azure-sdk-for-go/sdk/azidentity"
 	"golang.org/x/net/http2"
 )
@@ -35,7 +36,7 @@ func Test{{exampleGroup.operationGroup.language.go.name}}_{{exampleGroup.operati
 {%- for example in exampleGroup.examples %}
     // From example {{example.originalFile}}
 	{%- if sendExampleId %}
-	ctx = policy.WithHTTPHeader(ctx, map[string][]string{
+	ctx = runtime.WithHTTPHeader(ctx, map[string][]string{
         "example-id": {"{{example.name.split('\\').join('\\\\').split('"').join('\\"')}}"},
     })
 	{%- endif %}
