--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/scenarioContent.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/scenarioContent.go.njk
@@ -1,17 +1,23 @@
-{%- set _ = allVariables.splice(0, allVariables.length) %}
+{%- set allVariables = [] %}
+{%- set firstDeployment = true %}
+{%- set firstDeploymentOutput = true %}
+var err error
 {%- for step in steps %}
-// From step {{step.step}}
+    // From step {{step.step}}
     {%- if step.type == "restCall" %}
         {%- set example = step.exampleModel %}
         {%- set clientVariable = jsFunc.uncapitalize(example.operationGroup.language.go.clientName) %}
         {%- if allVariables.indexOf(clientVariable)<0 %}
-{{clientVariable}} := {{packageName}}.{{example.operationGroup.language.go.clientCtorName}}({{example.clientParametersOutput + ", " if example.clientParametersOutput else ""}}cred, options)
-            {%- set _ = allVariables.push(clientVariable) %}
+    {{clientVariable}} := {{packageName}}.{{example.operationGroup.language.go.clientCtorName}}({{example.clientParametersOutput + ", " if example.clientParametersOutput else ""}}testsuite.cred, testsuite.options)
+        {%- set _ = allVariables.push(clientVariable) %}
         {%- endif %}
     {%- endif %}
-{
-    {%- for name, value in step.variables %}
-{{name}} := {{value}}
+    {%- for name, value in step.variablesOutput %}
+    {%- if globalVariables.indexOf(name)>=0 %}
+    testsuite.{{name}} = {{value}}
+    {%- else %}
+    {{name}} {%- if allVariables.indexOf(name)<0 %}:{%- set _ = allVariables.push(name) %}{%- endif %}= {{value}}
+    {%- endif %}
     {%- endfor %}
     {%- if step.type == "restCall" %}		
         {%- if example.checkResponse %}
@@ -20,94 +26,88 @@
         {%- if example.returnInfo.length == 2 %}
             {%- if example.isLRO %}
                 {%- set pollerVariable = jsFunc.genVariableName(example.pollerType)%}
-                {{pollerVariable}}, err := {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
+                {{pollerVariable}}, err {%- if allVariables.indexOf(pollerVariable)<0 %}:{%- set _ = allVariables.push(pollerVariable) %}{%- endif %}= {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
             {%- else %}
-                {% if example.checkResponse %}{{resVariable}}{%- else %}_{%- endif %}, err := {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
+                {% if example.checkResponse %}{{resVariable}}{%- else %}_{%- endif %}, err {% if example.checkResponse and allVariables.indexOf(resVariable)<0 %}:{%- set _ = allVariables.push(resVariable) %}{% endif %}= {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
             {%- endif %}
-            if err != nil {
-                t.Fatalf("Request error: %v", err)
-            }
+            testsuite.Require().NoError(err)
             {%- if example.isLRO %}
             {%- if example.checkResponse %}
+            {%- if allVariables.indexOf(resVariable)<0 %}
             var {{resVariable}} {{packageName}}.{{example.operationGroup.language.go.clientName}}{{example.operation.language.go.name}}Response
+            {%- endif %}
             {%- endif %}
             if recording.GetRecordMode() == recording.PlaybackMode {
                 for {
-                    _, err = {{pollerVariable}}.Poller.Poll(ctx)
-                    if err != nil {
-                        t.Fatalf("Request error: %v", err)
-                    }
+                    _, err = {{pollerVariable}}.Poller.Poll(testsuite.ctx)
+                    testsuite.Require().NoError(err)
                     if {{pollerVariable}}.Poller.Done() {
-                        {% if example.checkResponse %}{{resVariable}}{%- else %}_{%- endif %}, err = {{pollerVariable}}.Poller.FinalResponse(ctx)
-                        if err != nil {
-                            t.Fatalf("Request error: %v", err)
-                        }
+                        {% if example.checkResponse %}{{resVariable}}{%- else %}_{%- endif %}, err = {{pollerVariable}}.Poller.FinalResponse(testsuite.ctx)
+                        testsuite.Require().NoError(err)
                         break
                     }
                 }
             } else {
-                {% if example.checkResponse %}{{resVariable}}{%- else %}_{%- endif %}, err = {{pollerVariable}}.PollUntilDone(ctx, 10*time.Second)
-                if err != nil {
-                    t.Fatalf("Request error: %v", err)
-                }
+                {% if example.checkResponse %}{{resVariable}}{%- else %}_{%- endif %}, err = {{pollerVariable}}.PollUntilDone(testsuite.ctx, 10*time.Second)
+                testsuite.Require().NoError(err)
             }
             {%- endif %}
         {%- elif  (example.returnInfo.length == 1) and (example.isPageable) %}
             {%- set pagerVariable = jsFunc.genVariableName(example.pageableType) %}
-            {{pagerVariable}} := {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
-            for {{pagerVariable}}.NextPage(ctx) {
-                if err := {{pagerVariable}}.Err(); err != nil {
-                    t.Fatalf("Failed to advance page: %v", err)
-                }
+            {{pagerVariable}} {%- if allVariables.indexOf(pagerVariable)<0 %}:{%- set _ = allVariables.push(pagerVariable) %}{%- endif %}= {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
+            for {{pagerVariable}}.NextPage(testsuite.ctx) {
+                err = {{pagerVariable}}.Err()
+                testsuite.Require().NoError(err)
                 for _, v := range {{pagerVariable}}.PageResponse().{{example.pageableItemName}} {
-                    t.Logf("Pager result: %#v\n", v)
+                    _ = v
                 }
             }
         {%- else %}
             {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
         {%- endif %}
 
-        {%- if example.isLRO and example.isPageable and example.checkResponse %}
-            for {{resVariable}}.NextPage(ctx) {
-                if err := {{resVariable}}.Err(); err != nil {
-                    t.Fatalf("Failed to advance page: %v", err)
-                }
+        {%- if example.isLRO and example.isPageable %}
+            for {{resVariable}}.NextPage(testsuite.ctx) {
+                err = {{resVariable}}.Err()
+                testsuite.Require().NoError(err)
                 for _, v := range {{resVariable}}.PageResponse().{{example.pageableItemName}} {
-                    t.Logf("Pager result: %#v\n", v)
+                    _ = v
                 }
             }
         {%- endif %}
 
         {%- if example.checkResponse and not example.isPageable%}
-            t.Logf("Response result: %#v\n", {{resVariable}}.{%- if example.isMultiRespOperation %}Value{%- else %}{{example.operationGroup.language.go.clientName}}{{example.operation.language.go.name}}Result{%- endif %})
-
             {%- for outputVariableName, variableConfigs in step.outputVariablesModel%}
-                {{outputVariableName}} = {% if step.outputVariables[outputVariableName]["isPtr"] %}*{% endif %}{{resVariable}}{% for variableConfig in variableConfigs %}{{variableConfig.languageName}}{% endfor %}
+                {% if globalVariables.indexOf(outputVariableName)>=0 %}testsuite.{% endif %}{{outputVariableName}} = {% if step.outputVariables[outputVariableName]["isPtr"] %}*{% endif %}{{resVariable}}{% for variableConfig in variableConfigs %}{{variableConfig.languageName}}{% endfor %}
             {%- endfor %}
         {%- endif %}
     {%- elif step.type == "armTemplateDeployment" %}
-        {%- if step.armTemplatePayload.outputs %}
-        {%- set deploymentVariable = "deploymentExtend" %}
-        {%- else %}
-        {%- set deploymentVariable = "_" %}
-        {%- endif %}
-    template := {{step.armTemplateOutput}}
-    params := map[string]interface{}{
+    template {%- if firstDeployment %}:{%- endif %}= {{step.armTemplateOutput}}
+    params {%- if firstDeployment %}:{%- endif %}= map[string]interface{}{
         {%- for k, v in step.armTemplatePayload.parameters %}
         {%- if v.defaultValue === "$("  + k + ")" %}
-    "{{k}}": map[string]interface{}{ "value": {{k}},},
+    "{{k}}": map[string]interface{}{ "value": {% if globalVariables.indexOf(k)>=0 %}testsuite.{% endif %}{{k}},},
         {%- endif %}
         {%- endfor %}
     }
-    {{deploymentVariable}}, err := scenario_test.CreateDeployment(ctx, cred, options, subscriptionId, resourceGroupName, "{{step.step}}", template, params)
-    if err != nil {
-        t.Fatalf("Deployment error: %v", err)
-    }
+    deployment {%- if firstDeployment %}:{%- set firstDeployment = false %}{%- endif %}= armresources.Deployment{
+		Properties: &armresources.DeploymentProperties{
+			Template:   template,
+			Parameters: params,
+			Mode:       armresources.DeploymentModeIncremental.ToPtr(),
+		},
+	}
+    {%- if step.armTemplatePayload.outputs %}
+    deploymentExtend, err {%- if firstDeploymentOutput %}:{%- set firstDeploymentOutput = false %}{%- endif %}= testutil.CreateDeployment(testsuite.ctx, testsuite.subscriptionId, testsuite.cred, testsuite.options, testsuite.resourceGroupName, "{{step.step}}", &deployment)
+    testsuite.Require().NoError(err)
     {%- for k,v in step.armTemplatePayload.outputs %}
-    {{k}} = {{deploymentVariable}}.Properties.Outputs["{{k}}"].(map[string]interface{})["value"].(string)
+    {% if globalVariables.indexOf(k)>=0 %}testsuite.{% endif %}{{k}} = deploymentExtend.Properties.Outputs["{{k}}"].(map[string]interface{})["value"].(string)
     {%- endfor %}
+    {%- else %}
+    _, err = testutil.CreateDeployment(testsuite.ctx, testsuite.subscriptionId, testsuite.cred, testsuite.options, testsuite.resourceGroupName, "{{step.step}}", &deployment)
+    testsuite.Require().NoError(err)
     {%- endif %}
-    }
+    {%- endif %}
     {%- if not loop.last %}
 
     {% endif %}
