Add Help link to APIView (#2992)
Fixes #2989

--- a/src/dotnet/APIView/APIViewWeb/Pages/Shared/_Layout.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -44,6 +44,9 @@
                             <a asp-action="Logout" asp-controller="Account" class="nav-link">Log Out</a>
                         </li>
                         }
+                        <li class="nav-item">
+                            <a href="https://github.com/Azure/azure-sdk-tools/blob/main/src/dotnet/APIView/APIViewWeb/README.md" class="nav-link">Help</a>
+                        </li>
                     </ul>
                 </div>
             </div>
