fix go testgen problem (#2986)
* fix: lro need to get final response type name

* fix: client subscription param problem

* fix: oav loader cache

* test: update test snapshot

* fix: ci error

* chore: minor adjustment

* build: release @autorest/testmodeler_v2.2.4 @autorest/gotest_v2.2.1

--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/scenarioContent.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/scenarioContent.go.njk
@@ -35,6 +35,7 @@ var err error
             {%- if example.checkResponse %}
             {%- if allVariables.indexOf(resVariable)<0 %}
             var {{resVariable}} {{packageName}}.{{example.operationGroup.language.go.clientName}}{{example.operation.language.go.name}}Response
+            {%- set _ = allVariables.push(resVariable) %}
             {%- endif %}
             {%- endif %}
             if recording.GetRecordMode() == recording.PlaybackMode {
